--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@
 }
 
 #ball{
-	background:#fbb;
+	/*background:#fbb;*/
+	background-image: url(img/soccer.png);
 	position: absolute;
 	width:20px;
 	height: 20px;
