--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@
 	overflow: hidden;
 }
 
+#scoreboard {
+  color: #F8F8F2;
+  background-color: #1EC3C3;
+  border-radius: 10px;
+  width: 400px;
+  height: 100px;
+}
+
 #ball{
 	/*background:#fbb;*/
 	background-image: url(img/soccer.png);
